--- a/lib/rumbl_web/live/users_new_live.html.heex
+++ b/lib/rumbl_web/live/users_new_live.html.heex
@@ -1,6 +1,6 @@
 <h1 class="text-3xl font-bold">Welcome, newcomer.</h1>
 
-<.simple_form for={@form} phx-submit="change_user">
+<.simple_form for={@form} phx-submit="create_user">
   <div>
     <.input field={@form[:name]} placeholder="Name" />
   </div>
